# beer_color_prediction

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  app.py  hello.py  pyproject.toml  requirements-dev.txt  requirements.txt
app/: main.py
beer_color_prediction/: __init__.py  config.py  dataset.py
beer_color_prediction/modeling/: train.py
notebooks/: 1.EDA.ipynb  2.Modelagem.ipynb  3.Interpretabilidade.ipynb
